Add reorder and get users methods.
